fixed massive error with grid spacing

--- a/lesson-7/css/large-7.css
+++ b/lesson-7/css/large-7.css
@@ -10,7 +10,7 @@
     
     .container {
         grid-template-columns: 30% 30% 30%;
-        grid-template-rows: 250px 250px 250px;
+        grid-template-rows: 250px 250px 300px;
     }
 
 	footer,
